# rust-programming

./: Cargo.toml  README.md
src/day1/: control_structures.rs  data_types.rs  error_handling.rs  error_handling2.rs  functions.rs  generics.rs  main.rs  ownership_and_borrowing.rs  traits.rs  traits_and_generics.rs  variables.rs
src/day1/data/: numbers.txt
src/day2/: main.rs
src/day2/modules/: bar.rs  foo.rs
src/day2/ownership_and_borrowing/: borrowing.rs  borrowing_mutable_reference.rs  borrowing_with_slices.rs  immutable_borrowing_struct_field.rs  mutable_borrowing.rs  mutable_borrowing_struct_field.rs  ownership.rs  ownership_transfer.rs
src/day2/standard_library/: library_usage.rs
src/day2/standard_library/data/: sample.txt  sample_output.txt
src/day3/: main.rs  regex_parser.rs
src/day4/: main.rs  menu.rs  player.rs  song.rs
