[package]
name = "rust-programming"
version = "0.1.0"
authors = ["Your Name <your_email@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "rust-programming"
path = "src/day1/main.rs"

[[bin]]
name = "rust-programming-day2"
path = "src/day2/main.rs"
